# crewairag

./: .env  README.md  pyproject.toml  sidoakgithub  sidoakgithub.pub
crewrag/src/crew/: search_crew.py
crewrag/src/test/: test_ollama.py
crewrag/src/tools/: ingestion.py  pdf_tool.py  web_search_tool.py
crewrag/ui/: search_rag.py
