[tool.poetry]
name = "crewrag"
version = "0.1.0"
description = "A project using CrewAI, Qdrant, and Gemini LLM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = "1.8.0"
crewai-tools="1.8.0"
qdrant-client = "1.16.0"
langchain = "1.2.4"
langchain-community = "0.4.0"
langchain-ollama="1.0.1"
langchain-core="1.2.7"
langchain-text-splitters="1.1.0"
pypdf="6.5.0"
sentence-transformers="5.2.0"
litellm="1.55.8"  
streamlit="1.53.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"